# erp-test

./: CMakeLists.txt  README.md
firmware/: CMakeLists.txt
firmware/src/application/: .cproject  .project
firmware/src/application/src/: main.c
firmware/src/application/src/erp/: erp.c  erp_test.c  erp_test.h
firmware/src/application/src/midi/: MIDI_relay.c  MIDI_relay.h
firmware/src/application/src/usb/: nl_usb_descmidi.c
firmware/src/shared/erp/: ERP.h  ERP_Decoder.c  ERP_Quantizer.c
firmware/src/shared/midi/: nl_sysex.c  nl_sysex.h
firmware/src/shared/sys/: nl_version.h
tools/: CMakeLists.txt
tools/erp-readout/: CMakeLists.txt  erp_decode.c  erp_decode.h  main.c
tools/erp-readout/src/: main.c
tools/erp-readout/src/erp/: ERP_Decoder.c  ERP_Decoder.h
tools/erp-readout/tmp/: erp_decode.c
tools/mk-sysex/: CMakeLists.txt
